--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buy From Au</title>
+    <title>Amar Sasroy</title>
 
     <link rel="stylesheet" href="./assets/css/all.css" />
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
@@ -25,9 +25,9 @@
             <nav class="navbar-section navbar navbar-expand-lg nav-fixed">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <div class="logo">
+                        <!--<div class="logo">
                             <img class="logo-img" src="./assets/images/buyfromau.png" alt="logo">
-                        </div>
+                        </div>-->
                     </a>
                     <button class="navbar-toggler navbar-button" type="button" data-toggle="collapse"
                         data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -64,8 +64,8 @@
                                     <p><strong>STAY TUNED</strong></p>
                                     <h1 class="mb-4">New Website Launching Soon</h1>
                                 </div>
-                                <h2>Welcome to www.buyfromau.com</h2>
-                                <h2>Thankyou for vising the buy from Australia website.</h2>
+                                <h2>Welcome to www.amarsasroy.com</h2>
+                                <h2>Thankyou for vising the Amar Sasroy website.</h2>
                                 <p class="mb-0 pb-3">We’re working hard to make this website available soon. You will
                                     then find a new
                                     design and our new collection of
