--- a/index.html
+++ b/index.html
@@ -1,88 +1,10 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Redirecting to https://amarshasroy.com</title>
+    <meta http-equiv="refresh" content="0; URL=https://example.com">
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amar Shasroy</title>
-
-    <link rel="stylesheet" href="./assets/css/all.css" />
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
-    <script src="./assets/scripts/bootstrap.min.js" type="text/javascript"></script>
-</head>
-
-<body>
-    <div class="wrapper">
-
-        <!----- Header Start ----->
-
-        <div class="header">
-            <nav class="navbar-section navbar navbar-expand-lg nav-fixed">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <!--<div class="logo">
-                            <img class="logo-img" src="./assets/images/buyfromau.png" alt="logo">
-                        </div>-->
-                    </a>
-                    <button class="navbar-toggler navbar-button" type="button" data-toggle="collapse"
-                        data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon navbar-menu-icon"><i class="fas fa-bars"></i></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse navbar-custom" id="navbarNav">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-
-        <!----- Header End ----->
-
-
-        <!----- Main Content Start ----->
-
-        <div class="main-content">
-            <section id="about-us-home-section">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="about-us-home-content">
-                                <div class="title-section">
-                                    <p><strong>STAY TUNED</strong></p>
-                                    <h1 class="mb-4">New Website Launching Soon</h1>
-                                </div>
-                                <h2>Welcome to www.amarshasroy.com</h2>
-                                <h2>Thankyou for vising the Amar Shasroy website.</h2>
-                                <p class="mb-0 pb-3">We’re working hard to make this website available soon. You will
-                                    then find a new
-                                    design and our new collection of
-                                    products! <br> Until then please bear with us.</p>
-                                <p>Notify me when there’s some action:</p>
-                                <h2><a href="mailto:info@simplexhub.com">info@simplexhub.com</a></h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-
-        <!----- Main Content End ----->
-
-    </div>
-
-</body>
-
+  <link rel="canonical" href="http://amarshasroy.com">
 </html>
