--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Redirecting to https://amarshasroy.com</title>
+    <title>Redirecting to http://amarshasroy.com</title>
     <meta http-equiv="refresh" content="0; URL=https://example.com">
   </head>
 
