--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Redirecting to http://amarshasroy.com</title>
-    <meta http-equiv="refresh" content="0; URL=https://example.com">
+    <meta http-equiv="refresh" content="0; URL=http://amarshasroy.com">
   </head>
 
   <link rel="canonical" href="http://amarshasroy.com">
